# engram

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/engram/: __init__.py  __main__.py  cli.py  config.py
src/engram/core/: __init__.py  compress.py  ingest.py  lint.py  parsing.py  query.py  save.py
src/engram/llm/: __init__.py  base.py  claude.py  factory.py  ollama.py  openai_.py
src/engram/prompts/: compress.py  ingest.py  lint.py  query.py  save.py
src/engram/sources/: __init__.py  text.py  url.py
src/engram/wiki/: __init__.py  article.py  store.py
tests/: conftest.py  helpers.py  test_compress.py  test_core.py  test_ingest.py  test_lint.py  test_parsing.py  test_security.py  test_wiki.py
