[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "engram-wiki"
version = "0.1.0"
description = "Persistent memory for AI agents. They learn once, remember forever."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Emiliano Panelli" }]
keywords = ["llm", "ai", "agents", "memory", "knowledge-base", "wiki", "claude", "openai", "ollama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "markdownify>=0.13",
    "beautifulsoup4>=4.12",
    "toml>=0.10",
]

[project.optional-dependencies]
claude = ["anthropic>=0.40"]
openai = ["openai>=1.50"]
all = ["anthropic>=0.40", "openai>=1.50"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
engram = "engram.cli:app"

[project.urls]
Homepage = "https://github.com/emipanelliok/engram"
Repository = "https://github.com/emipanelliok/engram"
Issues = "https://github.com/emipanelliok/engram/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/engram"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
